[gd_scene load_steps=18 format=3 uid="uid://ce8oxjeft3feq"]

[ext_resource type="Script" path="res://player/player.gd" id="1_bt2nw"]
[ext_resource type="Texture2D" uid="uid://88dxptj35hph" path="res://icon.svg" id="1_q0tl4"]
[ext_resource type="Script" path="res://player/player_movement.gd" id="3_4uyti"]
[ext_resource type="Script" path="res://player/player_shooting.gd" id="4_y48kl"]
[ext_resource type="Texture2D" uid="uid://8t7m5pij44ai" path="res://assets/images/Queen/Air1.png" id="5_bsww1"]
[ext_resource type="Texture2D" uid="uid://c1g4dpomgvfc" path="res://assets/images/Queen/Idle1.png" id="5_t1qqu"]
[ext_resource type="Texture2D" uid="uid://cd6vopmwi1kyh" path="res://assets/images/Queen/Idle2.png" id="6_dr8du"]
[ext_resource type="Texture2D" uid="uid://bi2aq251gc8hy" path="res://assets/images/Queen/Air2.png" id="6_fgra0"]
[ext_resource type="Texture2D" uid="uid://fdxc10t3fxvv" path="res://assets/images/Queen/Jump1.png" id="9_6wwsa"]
[ext_resource type="Texture2D" uid="uid://oudqsf0f5qlp" path="res://assets/images/Queen/Roll1.png" id="10_fwce3"]
[ext_resource type="Texture2D" uid="uid://dcoymh84li4g7" path="res://assets/images/Queen/Roll2.png" id="11_3p2rg"]
[ext_resource type="Texture2D" uid="uid://ljjgijmpxd86" path="res://assets/images/Queen/Run1.png" id="12_sfxtd"]
[ext_resource type="Texture2D" uid="uid://himqjidn3nkj" path="res://assets/images/Queen/Run2.png" id="13_3rxsj"]
[ext_resource type="Texture2D" uid="uid://bnoie3c8vytcm" path="res://assets/images/Queen/Wall.png" id="14_6ytq1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wu2jy"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3coyb"]
radius = 66.0681

[sub_resource type="SpriteFrames" id="SpriteFrames_4p1t2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_bsww1")
}, {
"duration": 1.0,
"texture": ExtResource("6_fgra0")
}],
"loop": true,
"name": &"Air",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_t1qqu")
}, {
"duration": 1.0,
"texture": ExtResource("6_dr8du")
}],
"loop": true,
"name": &"Idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_6wwsa")
}],
"loop": true,
"name": &"Jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_fwce3")
}, {
"duration": 1.0,
"texture": ExtResource("11_3p2rg")
}],
"loop": true,
"name": &"Roll",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_sfxtd")
}, {
"duration": 1.0,
"texture": ExtResource("13_3rxsj")
}],
"loop": true,
"name": &"Run",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_6ytq1")
}],
"loop": true,
"name": &"Wall",
"speed": 3.0
}]

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_bt2nw")

[node name="PlayerSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
scale = Vector2(0.234, 0.234)
texture = ExtResource("1_q0tl4")

[node name="PlayerCollision" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
scale = Vector2(1.5, 1.5)
shape = SubResource("RectangleShape2D_wu2jy")

[node name="PrivateScripts" type="Node" parent="."]

[node name="Movement" type="Node" parent="PrivateScripts"]
unique_name_in_owner = true
script = ExtResource("3_4uyti")

[node name="Shooting" type="Node" parent="PrivateScripts"]
script = ExtResource("4_y48kl")

[node name="Timers" type="Node" parent="."]

[node name="JumpBufferTimer" type="Timer" parent="Timers"]
unique_name_in_owner = true
wait_time = 0.1
one_shot = true

[node name="AimCursor" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Sprite2D2" type="Sprite2D" parent="AimCursor"]
position = Vector2(30, 0)
scale = Vector2(0.118, 0.118)
texture = ExtResource("1_q0tl4")

[node name="JumpIndicator" type="Sprite2D" parent="."]
unique_name_in_owner = true
modulate = Color(0.708337, 0, 0.416291, 1)
z_index = 10
position = Vector2(2.27374e-13, 21)
scale = Vector2(0.305745, 0.0530571)
texture = ExtResource("1_q0tl4")

[node name="ChaseHitbox" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2
monitoring = false

[node name="ChaseSprite" type="Sprite2D" parent="ChaseHitbox"]
unique_name_in_owner = true
modulate = Color(0.972873, 2.11775e-06, 0.54633, 0.211765)
z_index = 10
scale = Vector2(1.02245, 1.04867)
texture = ExtResource("1_q0tl4")

[node name="ChaseCollision" type="CollisionShape2D" parent="ChaseHitbox"]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_3coyb")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -37)
scale = Vector2(4.16, 4.16)
sprite_frames = SubResource("SpriteFrames_4p1t2")
animation = &"Wall"
frame_progress = 0.241096

[connection signal="timeout" from="Timers/JumpBufferTimer" to="." method="_on_jump_buffer_timer_timeout"]
[connection signal="body_entered" from="ChaseHitbox" to="." method="_on_chase_hitbox_body_entered"]
